Update to Website Text

--- a/account.html
+++ b/account.html
@@ -50,7 +50,7 @@
     <!--Initial data when landing on page-->
       <div class="scrumFormat">
         <h1>Scrum Account Settings Page</h1>
-        <p class="lead">Place holder text, insert welcome message here.<br>Place holder text, insert scrum description here.<br></p>
+        <p class="lead">Todo:<br>- Account settings such as delete account, modify accoutn details, etc.</p>
           
           <!-- Account settings such as Delete account, Modify account details, etc. -->
                 
