--- a/findfood.html
+++ b/findfood.html
@@ -50,7 +50,7 @@
     <!--Initial data when landing on page-->
       <div class="scrumFormat">
         <h1>Scrum Find Food Page</h1>
-        <p class="lead">Place holder text, insert welcome message here.<br>Place holder text, insert scrum description here.<br></p>
+        <p class="lead">Todo:<br>- Load results by location (done by gps?)<br>- Filter and sort results<br>- Load details for food post<br>- Instant messaging service (possibly in seperate page?)<br>- Display results in interactive map</p>  
           
         <!-- Load results by location (done by gps?) -->
         <!-- Filter and sort results -->
