--- a/home.html
+++ b/home.html
@@ -52,6 +52,8 @@
         <h1>Scrum Home Page</h1>
         <p class="lead">Place holder text, insert welcome message here.<br>Place holder text, insert scrum description here.<br></p>
           
+        <p>Todo:<br>- A large picture<br>- Link to download from app store?<br>- About us (small print)<br>- Log in and register system (potentially in it's own page?)<br>- Notifications/Recomendations</p>  
+          
         <!-- A large picture -->
         <!-- Link to download from app store? -->
         <!-- About us small details -->
