--- a/postfood.html
+++ b/postfood.html
@@ -50,7 +50,7 @@
     <!--Initial data when landing on page-->
       <div class="scrumFormat">
         <h1>Scrum Post Food Page</h1>
-        <p class="lead">Place holder text, insert welcome message here.<br>Place holder text, insert scrum description here.<br></p>
+          <p>Todo:<br>- Create/Edit posts<br>- Barcode scanning capability</p>
           
           <!-- Create/Edit posts -->
           <!-- Barcode scanning capability -->
