--- a/404.html
+++ b/404.html
@@ -36,7 +36,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="home.html">Home</a></li>
+            <li><a href="home.html">Home</a></li>
             <li><a href="postfood.html">Post Food</a></li>
               <li><a href="findfood.html">Find Food</a></li>
             <li><a href="account.html">Account Settings</a></li>
