--- a/postfood.html
+++ b/postfood.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,60 +17,71 @@
     <!-- Custom styles for this template -->
     <link href="/css/scrumFormat.css" rel="stylesheet">
 
-  </head>
+</head>
 
-  <body>
+<body>
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
     <!--Bootstrap Navigation Bar-->
     <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="">SCRUM</a>
+                <a class="navbar-brand" href="">SCRUM</a>
+            </div>
+            <div id="navbar" class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="home.html">Home</a></li>
+                    <li class="active"><a href="postfood.html">Post Food</a></li>
+                    <li><a href="findfood.html">Find Food</a></li>
+                    <li><a href="account.html">Account Settings</a></li>
+                </ul>
+            </div>
+            <!--/.nav-collapse -->
         </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="home.html">Home</a></li>
-            <li class="active"><a href="postfood.html">Post Food</a></li>
-              <li><a href="findfood.html">Find Food</a></li>
-            <li><a href="account.html">Account Settings</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
     </nav>
 
     <div class="container">
 
-    <!--Initial data when landing on page-->
-      <div class="scrumFormat">
-        <h1>Scrum Post Food Page</h1>
-          <p>Todo:<br>- Create/Edit posts<br>- Barcode scanning capability</p>
-
-          <!-- Create/Edit posts -->
-          <!-- Barcode scanning capability -->
-
-      </div>
-
-    </div><!-- /.container -->
+        <!--Initial data when landing on page-->
+        <div class="scrumFormat">
+            <h1>Post a food item</h1>
+            <!-- Create/Edit posts -->
+            <form>
+                <div class="form-group">
+                    <label for="txtTitle">Post Title</label>
+                    <input type="text" class="form-control" id="txtTitle">
+                </div>
+                <div class="form-group">
+                    <label for="txtDescription">Description</label>
+                    <input type="text" class="form-control" id="txtDescription">
+                </div>
+                <div class="form-group">
+                    <label for="txtLocation">Pick-up address</label>
+                    <input type="text" class="form-control" id="txtLocation">
+                </div>
+                <button type="submit" class="btn btn-default">Submit</button>
+            </form>
+            <!-- TODO Barcode scanning capability -->
+        </div>
+    </div>
+    <!-- /.container -->
 
     <script type="text/javascript">
-
         //Add necessary code here.
-
     </script>
-
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
-  </body>
+</body>
+
 </html>
