LoginRegister Page Update

--- a/loginAndRegister.html
+++ b/loginAndRegister.html
@@ -67,8 +67,8 @@
             </div>
             <button class="btn btn-primary" type="submit" id="registerButton">Register</button>
           </div>
-        </div>
-        <div class="panel panel-default">
+        <!--</div>-->
+        <!--<div class="panel panel-default">-->
           <div class="panel-heading">Login</div>
           <div class="panel-body">
             <div class="form-group">
