LoginRegister Page Update

--- a/loginAndRegister.html
+++ b/loginAndRegister.html
@@ -54,32 +54,36 @@
       </div>
 
       <div class="scrumFormat">
-        <div class="panel panel-default">
-          <div class="panel-heading">Register</div>
-          <div class="panel-body">
-            <div class="form-group">
-              <label for="usernameRegisterInput">Username:</label>
-              <input type="text" class="form-control" id="usernameRegisterInput">
+        <div class="col-xs-6">
+          <div class="panel panel-default">
+            <div class="panel-heading">Register</div>
+            <div class="panel-body">
+              <div class="form-group">
+                <label for="usernameRegisterInput">Username:</label>
+                <input type="text" class="form-control" id="usernameRegisterInput">
+              </div>
+              <div class="form-group">
+                <label for="passwordRegisterInput">Password:</label>
+                <input type="password" class="form-control" id="passwordRegisterInput">
+              </div>
+              <button class="btn btn-primary" type="submit" id="registerButton">Register</button>
             </div>
-            <div class="form-group">
-              <label for="passwordRegisterInput">Password:</label>
-              <input type="password" class="form-control" id="passwordRegisterInput">
-            </div>
-            <button class="btn btn-primary" type="submit" id="registerButton">Register</button>
           </div>
-        <!--</div>-->
-        <!--<div class="panel panel-default">-->
-          <div class="panel-heading">Login</div>
-          <div class="panel-body">
-            <div class="form-group">
-              <label for="usernameLoginInput">Username:</label>
-              <input type="text" class="form-control" id="usernameLoginInput">
+        </div>
+        <div class="col-xs-6">
+          <div class="panel panel-default">
+            <div class="panel-heading">Login</div>
+            <div class="panel-body">
+              <div class="form-group">
+                <label for="usernameLoginInput">Username:</label>
+                <input type="text" class="form-control" id="usernameLoginInput">
+              </div>
+              <div class="form-group">
+                <label for="passwordLoginInput">Password:</label>
+                <input type="password" class="form-control" id="passwordLoginInput">
+              </div>
+              <button class="btn btn-primary" type="submit" id="LoginButton">Login</button>
             </div>
-            <div class="form-group">
-              <label for="passwordLoginInput">Password:</label>
-              <input type="password" class="form-control" id="passwordLoginInput">
-            </div>
-            <button class="btn btn-primary" type="submit" id="LoginButton">Login</button>
           </div>
         </div>
       </div>
