--- a/postfood.html
+++ b/postfood.html
@@ -16,7 +16,6 @@
 
     <!-- Custom styles for this template -->
     <link href="/css/scrumFormat.css" rel="stylesheet">
-
 </head>
 
 <body>
@@ -52,19 +51,25 @@
         <!--Initial data when landing on page-->
         <div class="scrumFormat">
             <h1>Post a food item</h1>
+        </div>
+        <div>
             <!-- Create/Edit posts -->
-            <form>
+            <form id="frmPost" action="#" onclick="sendPostData()">
                 <div class="form-group">
                     <label for="txtTitle">Post Title</label>
-                    <input type="text" class="form-control" id="txtTitle">
+                    <input type="text" name="title" class="form-control" id="txtTitle">
                 </div>
                 <div class="form-group">
                     <label for="txtDescription">Description</label>
-                    <input type="text" class="form-control" id="txtDescription">
+                    <input type="text" name="description" class="form-control" id="txtDescription">
                 </div>
                 <div class="form-group">
                     <label for="txtLocation">Pick-up address</label>
-                    <input type="text" class="form-control" id="txtLocation">
+                    <input type="text" name="location" class="form-control" id="txtLocation">
+                </div>
+                <div class="form-group">
+                    <label for="txtImg">Picture of item</label>
+                    <input type="file" name="img" accept="image/*" id="txtImg">
                 </div>
                 <button type="submit" class="btn btn-default">Submit</button>
             </form>
@@ -73,15 +78,11 @@
     </div>
     <!-- /.container -->
 
-    <script type="text/javascript">
-        //Add necessary code here.
-    </script>
-
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
+    <script src="postfood.js"></script>
 </body>
 
 </html>
