LoginRegister Page Update

--- a/loginAndRegister.html
+++ b/loginAndRegister.html
@@ -55,22 +55,7 @@
 
       <div class="scrumFormat">
         <div class="col-xs-6">
-          <div class="panel panel-default">
-            <div class="panel-heading">Register</div>
-            <div class="panel-body">
-              <div class="form-group">
-                <label for="usernameRegisterInput">Username:</label>
-                <input type="text" class="form-control" id="usernameRegisterInput">
-              </div>
-              <div class="form-group">
-                <label for="passwordRegisterInput">Password:</label>
-                <input type="password" class="form-control" id="passwordRegisterInput">
-              </div>
-              <button class="btn btn-primary" type="submit" id="registerButton">Register</button>
-            </div>
-          </div>
-        </div>
-        <div class="col-xs-6">
+          <p>* fields are required</p>
           <div class="panel panel-default">
             <div class="panel-heading">Login</div>
             <div class="panel-body">
@@ -83,6 +68,30 @@
                 <input type="password" class="form-control" id="passwordLoginInput">
               </div>
               <button class="btn btn-primary" type="submit" id="LoginButton">Login</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-6">
+          <div class="panel panel-default">
+            <div class="panel-heading">Register</div>
+            <div class="panel-body">
+              <div class="form-group">
+                <label for="usernameRegisterInput">*Username:</label>
+                <input type="text" class="form-control" id="usernameRegisterInput">
+              </div>
+              <div class="form-group">
+                <label for="passwordRegisterInput">*Password:</label>
+                <input type="password" class="form-control" id="passwordRegisterInput">
+              </div>
+              <div class="form-group">
+                <label for="confirmPasswordRegisterInput">*Confirm Password:</label>
+                <input type="password" class="form-control" id="confirmPasswordRegisterInput">
+              </div>
+              <div class="form-group">
+                <label for="emailRegisterInput">*Email:</label>
+                <input type="email" class="form-control" id="emailRegisterInput">
+              </div>
+              <button class="btn btn-primary" type="submit" id="registerButton">Register</button>
             </div>
           </div>
         </div>
