LoginRegister Page Fix

--- a/postfood.html
+++ b/postfood.html
@@ -39,7 +39,7 @@
                     <li><a href="home.html">Home</a></li>
                     <li class="active"><a href="postfood.html">Post Food</a></li>
                     <li><a href="findfood.html">Find Food</a></li>
-                    <li><a href="loginAndRegister.html.html">Login & Register</a></li>
+                    <li><a href="loginAndRegister.html">Login & Register</a></li>
                     <li><a href="account.html">Account Settings</a></li>
                 </ul>
             </div>
