--- a/loginAndRegister.html
+++ b/loginAndRegister.html
@@ -17,7 +17,7 @@
     <link href="/css/scrumFormat.css" rel="stylesheet">
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script type="text/javascript" src="loginAndRegister.js"></script>
+    <script type="text/javascript" src="scripts/loginAndRegister.js"></script>
   </head>
 
   <>
@@ -107,24 +107,6 @@
           </div>
         </div>
       </div>
-
-      <script type="text/javascript">
-        $(document).on("click", "#registerButton", function() {
-        console.log("Pressed");
-        var username = $("#usernameRegisterInput").val();
-        var password = $("#passwordRegisterInput").val();
-        var confirmPassword = $("#confirmPasswordRegisterInput").val();
-        var firstName = $("#firstNameRegisterInput").val();
-        var lastName = $("#lastNameRegisterInput").val();
-        var email = $("#emailRegisterInput").val();
-        if(registerFieldsValid(username, password, confirmPassword, firstName, lastName, email)){
-        console.log("All fields valid!");
-        registerUser(username, password, confirmPassword, firstName, lastName, email);
-        } else {
-        console.log("Fields not Valid!");
-        }
-        });
-      </script>
 
     </div><!-- /.container -->
       
