Register Functionality Prints

--- a/loginAndRegister.html
+++ b/loginAndRegister.html
@@ -16,7 +16,7 @@
     <!-- Custom styles for this template -->
     <link href="/css/scrumFormat.css" rel="stylesheet">
 
-    <script type="text/javascript" src="scripts/loginAndRegister.js"></script>
+    <script type="text/javascript" src="loginAndRegister.js"></script>
   </head>
 
   <body>
