--- a/postfood.html
+++ b/postfood.html
@@ -16,13 +16,13 @@
 
     <!-- Custom styles for this template -->
     <link href="/css/scrumFormat.css" rel="stylesheet">
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
     <script type="text/javascript" src="postfood.js"></script>
 </head>
 
 <body>
 
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
     <!--Bootstrap Navigation Bar-->
     <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -72,7 +72,8 @@
                 </div>
                 <div class="form-group">
                     <label for="txtImg">Picture of item</label>
-                    <input type="file" name="img" class="form-control" accept="image/*" id="txtImg">
+                    <input type="file" name="img" class="form-control" accept="image/*" id="txtImg"><br>
+                    <img id="imgPreview" src="" height="200" alt="Image preview...">
                 </div>
                 <button type="button" class="btn btn-default" onclick="sendPostData()">Submit</button>
             </form>
