Image preview changes

--- a/postfood.html
+++ b/postfood.html
@@ -73,7 +73,7 @@
                 <div class="form-group">
                     <label for="txtImg">Picture of item</label>
                     <input type="file" name="img" class="form-control" accept="image/*" id="txtImg"><br>
-                    <img id="imgPreview" src="" height="200" alt="Image preview...">
+                    <img id="imgPreview" src="" height="200" alt="">
                 </div>
                 <button type="button" class="btn btn-default" onclick="sendPostData()">Submit</button>
             </form>
