--- a/postfood.html
+++ b/postfood.html
@@ -19,6 +19,14 @@
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
     <script type="text/javascript" src="postfood.js"></script>
+
+    <style type="text/css">
+        #imgPreview {
+            margin: 5px;
+            /*float: right;*/
+            max-height: 200px;
+        }
+    </style>
 </head>
 
 <body>
@@ -72,8 +80,8 @@
                 </div>
                 <div class="form-group">
                     <label for="txtImg">Picture of item</label>
-                    <input type="file" name="img" class="form-control" accept="image/*" id="txtImg"><br>
-                    <img id="imgPreview" src="" height="200" alt="">
+                    <input type="file" name="img" class="form-control" accept="image/*" id="txtImg">
+                    <img id="imgPreview" src="" alt="">
                 </div>
                 <button type="button" class="btn btn-default" onclick="sendPostData()">Submit</button>
             </form>
