--- a/postfood.html
+++ b/postfood.html
@@ -68,15 +68,15 @@
             <form id="frmPost" action="#">
                 <div class="form-group">
                     <label for="txtTitle">Post Title</label>
-                    <input type="text" name="title" class="form-control" id="txtTitle">
+                    <input type="text" name="Post Title" class="form-control" id="txtTitle">
                 </div>
                 <div class="form-group">
                     <label for="txtDescription">Description</label>
-                    <input type="text" name="description" class="form-control" id="txtDescription">
+                    <input type="text" name="Description" class="form-control" id="txtDescription">
                 </div>
                 <div class="form-group">
-                    <label for="txtLocation">Pick-up address</label>
-                    <input type="text" name="location" class="form-control" id="txtLocation">
+                    <label for="txtLocation">Pick-up location</label>
+                    <input type="text" name="Pick-up location" class="form-control" id="txtLocation">
                 </div>
                 <div class="form-group">
                     <label for="txtImg">Picture of item</label>
