--- a/postfood.html
+++ b/postfood.html
@@ -55,6 +55,21 @@
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
+                                <li class="dropdown dropdown-notifications" >
+                <!--Todo: want to make it pull left. --> 
+            <a href="#notifications-panel" class="dropdown-toggle" data-toggle = "dropdown" id = "notificationsButton"> 
+            
+              <i data-count="2" class="glyphicon glyphicon-comment "></i>
+            </a>
+              <ul class = "dropdown-menu" id = "notificationsPanel">
+                <div class="container">
+                  <h3>Notifications</h3>  
+                    <!-- where the notifications will be put -->
+                    <ul class = "notifications" id = "notificationList">
+                    </ul>
+                </div><!--/.nav-collapse -->
+                </ul>
+            </li>
                     <li><a href="home.html">Home</a></li>
                     <li class="active"><a href="postfood.html">Post Food</a></li>
                     <li><a href="findfood.html">Find Food</a></li>
