Login and Register system finished (aside from email verification) Added Ip npm to package.json Added Username & Authkey to localstorage upon login Added globalfunctions.js to all html pages.

--- a/findfood.html
+++ b/findfood.html
@@ -18,7 +18,8 @@
     <!-- Custom styles for this template -->
     <link href="/css/scrumFormat.css" rel="stylesheet">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>  
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script> 
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+      <script type="text/javascript" src="globalFunctions.js"></script>
      </head>
 
   <body>  
@@ -61,6 +62,7 @@
                 
 
           </ul>
+
         </div><!--/.nav-collapse -->
       </div>
     </nav>
@@ -134,6 +136,9 @@
             <li class="active"><a href="findfood.html">Find Food</a></li>
             <li><a href="loginAndRegister.html">Login & Register</a></li>
             <li><a href="account.html">Account Settings</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a id="navbarUsername" href="loginAndRegister.html">Not Logged in</a></li>
             </ul>
           </div>
       </div>
