--- a/home.html
+++ b/home.html
@@ -15,7 +15,8 @@
     <!-- Custom styles for this template -->
     <link href="/css/scrumFormat.css" rel="stylesheet">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>  
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script> 
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script type="text/javascript" src="globalFunctions.js"></script>
      </head>
 
   <body>  
@@ -57,6 +58,9 @@
             
                 
 
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a id="navbarUsername" href="loginAndRegister.html">Not Logged in</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
