--- a/loginAndRegister.html
+++ b/loginAndRegister.html
@@ -18,6 +18,7 @@
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="loginAndRegister.js"></script>
+    <script type="text/javascript" src="globalFunctions.js"></script>
   </head>
 
   <body>
@@ -41,6 +42,9 @@
             <li><a href="findfood.html">Find Food</a></li>
             <li class="active"><a href="loginAndRegister.html">Login & Register</a></li>
             <li><a href="account.html">Account Settings</a></li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a id="navbarUsername" href="loginAndRegister.html">Not Logged In</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
