--- a/postfood.html
+++ b/postfood.html
@@ -23,6 +23,7 @@
     <script src="/js/bootstrap.min.js"></script>
     <!-- Our own JS -->
     <script type="text/javascript" src="postfood.js"></script>
+    <script type="text/javascript" src="globalFunctions.js"></script>
     <!-- Additional CSS -->
     <style type="text/css">
         #imgPreview {
@@ -76,6 +77,9 @@
                     <li><a href="findfood.html">Find Food</a></li>
                     <li><a href="loginAndRegister.html">Login & Register</a></li>
                     <li><a href="account.html">Account Settings</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a id="navbarUsername" href="loginAndRegister.html">Not Logged in</a></li>
                 </ul>
             </div>
             <!--/.nav-collapse -->
