--- a/404.html
+++ b/404.html
@@ -42,6 +42,9 @@
             <li><a href="loginAndRegister.html">Login & Register</a></li>
             <li><a href="account.html">Account Settings</a></li>
           </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a id="navbarUsername" href="loginAndRegister.html">Not Logged In</a></li>
+          </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
@@ -62,13 +65,6 @@
       </div>
 
     </div><!-- /.container -->
-
-    <script type="text/javascript">
-
-        //Add necessary code here.
-
-    </script>
-
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
