Enter key now submits

--- a/loginAndRegister.html
+++ b/loginAndRegister.html
@@ -61,7 +61,7 @@
         <div class="col-xs-6">
           <div class="panel panel-default">
             <div class="panel-heading">Login</div>
-            <div class="panel-body">
+            <div id="loginPanel"  class="panel-body">
               <div class="form-group">
                 <label for="usernameLoginInput">Username:</label>
                 <input type="text" class="form-control" id="usernameLoginInput">
@@ -81,7 +81,7 @@
         <div class="col-xs-6">
           <div class="panel panel-default">
             <div class="panel-heading">Register</div>
-            <div class="panel-body">
+            <div id="registerPanel" class="panel-body">
               <p>* fields are required</p>
               <div class="form-group" id="firstNameRegisterGroup">
                 <label for="firstNameRegisterInput">*First Name:</label>
