finally working gly

--- a/findfood.html
+++ b/findfood.html
@@ -12,6 +12,8 @@
 
     <!-- Bootstrap core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
+
     <!-- Custom styles for this template -->
     <link href="/css/scrumFormat.css" rel="stylesheet">
     <link href="/css/findFoodCSSTest.css" rel="stylesheet">
@@ -24,6 +26,7 @@
     <script src="/js/bootstrap.min.js"></script>
     <script type = "text/javascript" src="findFoodTwo.js"></script>
     <script type="text/javascript" src="globalFunctions.js"></script>
+      
     
 
     </head>
@@ -49,7 +52,7 @@
             <li class="dropdown dropdown-notifications" >
                 <!--Todo: want to make it pull left. --> 
             <a href="#notifications-panel" class="dropdown-toggle" data-toggle = "dropdown" id = "notificationsButton"> 
-            <i data-count = "2" class="glyphicon glyphicon-envelope"></i>
+            <i data-count = "2" class="glyphicon glyphicon-bell"></i>
               <!--<i data-count="2" class="glyphicon glyphicon-comment "></i>-->
             </a>
               <ul class = "dropdown-menu" id = "notificationsPanel">
