pretty grid look etc

--- a/postfood.html
+++ b/postfood.html
@@ -60,7 +60,7 @@
                         <!--Todo: want to make it pull left. -->
                         <a href="#notifications-panel" class="dropdown-toggle" data-toggle="dropdown" id="notificationsButton">
 
-                                <i data-count = "2" class="glyphicon glyphicon-envelope"></i>
+                            <i data-count="2" class="glyphicon glyphicon-comment "></i>
                         </a>
                         <ul class="dropdown-menu" id="notificationsPanel">
                             <div class="container">
