--- a/postfood.html
+++ b/postfood.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,8 +12,10 @@
 
     <!-- Bootstrap core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href="/css/scrumFormat.css" rel="stylesheet">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> 
     <!-- jQuery -->
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <!-- Map for location selection -->
@@ -43,34 +44,39 @@
 
 
     <!--Bootstrap Navigation Bar-->
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+    <nav class="navbar navbar-inverse navbar-fixed-top" id="navbar">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-                <a class="navbar-brand" href="">SCRUM</a>
-            </div>
-            <div id="navbar" class="collapse navbar-collapse">
-                <ul class="nav navbar-nav">
+            <a id = "navbarheader" class="navbar-brand" href="">
+                <img id="navbar-logo" src = "possibleLogo.png">
+            </a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
                     <li class="dropdown dropdown-notifications">
                         <!--Todo: want to make it pull left. -->
                         <a href="#notifications-panel" class="dropdown-toggle" data-toggle="dropdown" id="notificationsButton">
 
-                            <i data-count="2" class="glyphicon glyphicon-comment "></i>
+                            <i data-count="2" class="glyphicon glyphicon-bell "></i>
                         </a>
                         <ul class="dropdown-menu" id="notificationsPanel">
-                            <div class="container">
+                            <div class="container" id = "allNotifs">
                                 <h3>Notifications</h3>
-                                <ul class="notifications" id="notificationList">
+                                <div class="panel-group" id ="groupNotifPanels">
+                                <ul class="list-unstyled" id="notificationList">
                                     <!-- where the notifications will be put -->
                                 </ul>
                             </div>
+                            </div>
                             <!--/.nav-collapse -->
                         </ul>
+                        
                     </li>
                     <li><a href="home.html">Home</a></li>
                     <li class="active"><a href="postfood.html">Post Food</a></li>
