Added Post Management page

--- a/404.html
+++ b/404.html
@@ -58,7 +58,7 @@
                 </div><!--/.nav-collapse -->
             </ul>
             <li><a href="home.html">Home</a></li>
-            <li><a href="postfood.html">Post Food</a></li>
+            <li><a href="postManagement.html">Manage Posts</a></li>
             <li><a href="findfood.html">Find Food</a></li>
             <li><a href="loginAndRegister.html">Login & Register</a></li>
             <li><a href="account.html">Account Settings</a></li>
