--- a/home.html
+++ b/home.html
@@ -54,7 +54,7 @@
                 </ul>
             </li>
             <li class="active"><a href="home.html">Home</a></li>
-            <li><a href="postfood.html">Post Food</a></li>
+            <li><a href="postManagement.html">Manage Posts</a></li>
             <li><a href="findfood.html">Find Food</a></li>
             <li><a href="loginAndRegister.html">Login & Register</a></li>
               <li><a href="account.html">Account Settings</a></li>
