--- a/postfood.html
+++ b/postfood.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,7 +16,7 @@
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href="/css/scrumFormat.css" rel="stylesheet">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> 
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <!-- jQuery -->
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <!-- Map for location selection -->
@@ -45,38 +46,37 @@
 
     <!--Bootstrap Navigation Bar-->
     <nav class="navbar navbar-inverse navbar-fixed-top" id="navbar">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-            <a id = "navbarheader" class="navbar-brand" href="">
-                <img id="navbar-logo" src = "possibleLogo.png">
-            </a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
+                <a id="navbarheader" class="navbar-brand" href="">
+                    <img id="navbar-logo" src="possibleLogo.png">
+                </a>
+            </div>
+            <div id="navbar" class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
                     <li class="dropdown dropdown-notifications">
                         <!--Todo: want to make it pull left. -->
                         <a href="#notifications-panel" class="dropdown-toggle" data-toggle="dropdown" id="notificationsButton">
-
                             <i data-count="2" class="glyphicon glyphicon-bell "></i>
                         </a>
                         <ul class="dropdown-menu" id="notificationsPanel">
-                            <div class="container" id = "allNotifs">
+                            <div class="container" id="allNotifs">
                                 <h3>Notifications</h3>
-                                <div class="panel-group" id ="groupNotifPanels">
-                                <ul class="list-unstyled" id="notificationList">
-                                    <!-- where the notifications will be put -->
-                                </ul>
-                            </div>
+                                <div class="panel-group" id="groupNotifPanels">
+                                    <ul class="list-unstyled" id="notificationList">
+                                        <!-- where the notifications will be put -->
+                                    </ul>
+                                </div>
                             </div>
                             <!--/.nav-collapse -->
                         </ul>
-                        
+
                     </li>
                     <li><a href="home.html">Home</a></li>
                     <li><a href="postManagement.html">Manage Posts</a></li>
@@ -98,30 +98,59 @@
         <div class="scrumFormat">
             <h1>Post a food item</h1>
         </div>
-        <div>
+        <div class="row">
             <!-- Create/Edit posts -->
             <form id="frmPost" action="#">
-                <div class="form-group">
-                    <label for="txtTitle">Post Title</label>
-                    <input type="text" name="title" class="form-control" id="txtTitle" data-hr="Post Title">
-                </div>
-                <div class="form-group">
-                    <label for="txtDescription">Description</label>
-                    <input type="text" name="description" class="form-control" id="txtDescription" data-hr="Post Description">
-                </div>
-                <div class="form-group">
-                    <label for="txtLocation">Pick-up location</label>
-                    <p>Click a new location, or drag the marker to change location.</p>
+                <div class="col-md-8">
+                    <div class="form-group">
+                        <label for="txtTitle">Post Title</label>
+                        <input type="text" name="title" class="form-control" id="txtTitle" data-hr="Post Title">
+                    </div>
+                    <div class="form-group">
+                        <label for="txtDescription">Description</label>
+                        <input type="text" name="description" class="form-control" id="txtDescription" data-hr="Post Description">
+                    </div>
+                    <div class="form-group">
+                        <label for="txtLocation">Pick-up location</label>
+                        <p>Click a new location, or drag the marker to change location.</p>
 
-                    <div id="map"></div>
-                    <form method="post" action="#">
-                        Latitude: <input type="text" id="lat" readonly="yes"> Longitude: <input type="text" id="lng" readonly="yes">
-                    </form>
+                        <div id="map"></div>
+                        <form method="post" action="#">
+                            Latitude: <input type="text" id="lat" readonly="yes"> Longitude: <input type="text" id="lng" readonly="yes">
+                        </form>
+                    </div>
+                    <div class="form-group">
+                        <label for="txtImg">Picture of item</label>
+                        <input type="file" name="img" class="form-control" accept="image/jpg, image/jpeg, image/png" id="txtImg">
+                        <img id="imgPreview" src="" alt="">
+                    </div>
                 </div>
-                <div class="form-group">
-                    <label for="txtImg">Picture of item</label>
-                    <input type="file" name="img" class="form-control" accept="image/jpg, image/jpeg, image/png" id="txtImg">
-                    <img id="imgPreview" src="" alt="">
+                <div class="col-md-4">
+                    <!-- TODO Make the above on the left side, the below on the right side, except for small screens (grid layout hype) -->
+                    <div class="panel panel-default">
+                        <div class="panel-heading">Meal Type</div>
+                        <div class="panel-body">Breakfast/Lunch/Dinner (will be check/radio boxes)</div>
+                    </div>
+                    <div class="panel panel-default">
+                        <div class="panel-heading">Type By Country</div>
+                        <div class="panel-body">Italian/Chinese/Thai/French/Spanish/British (other?) (will be check/radio boxes)</div>
+                    </div>
+                    <div class="panel panel-default">
+                        <div class="panel-heading">Type Of Food</div>
+                        <div class="panel-body">Dairy/Meat/Veg/Fruit/Sweets/Snacks (other?) (will be check/radio boxes)</div>
+                    </div>
+                    <div class="panel panel-default">
+                        <div class="panel-heading">Size/Weight</div>
+                        <div class="panel-body">Small/Light // Medium // Large/Heavy (other?) (will be check/radio boxes)</div>
+                    </div>
+                    <div class="panel panel-default">
+                        <div class="panel-heading">Expiration Date</div>
+                        <div class="panel-body">Soon(&lt;1 week)/Medium/Long(&gt;1 month) (will be check/radio boxes)</div>
+                    </div>
+                    <div class="panel panel-default">
+                        <div class="panel-heading">Other</div>
+                        <div class="panel-body">Collection only // Business (will be check/radio boxes)</div>
+                    </div>
                 </div>
                 <button type="button" class="btn btn-default" onclick="sendPostData()">Submit</button>
             </form>
