Fixed top right username loading

--- a/account.html
+++ b/account.html
@@ -65,7 +65,7 @@
             <li class="active"><a href="account.html">Account Settings</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a id="navbarUsername" href="loginAndRegister.html">Not Logged in</a></li>
+            <li><a id="navbarUsername" href="loginAndRegister.html"></a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
