--- a/loginAndRegister.html
+++ b/loginAndRegister.html
@@ -65,7 +65,7 @@
             <li><a href="account.html">Account Settings</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a id="navbarUsername" href="loginAndRegister.html">Not Logged In</a></li>
+            <li><a id="navbarUsername" href="loginAndRegister.html"></a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -105,9 +105,9 @@
             <div class="panel-heading">Recover Username</div>
             <div id="recoverUsernamePanel"  class="panel-body">
               <div class="form-group">
-                <label for="usernameRecoverInput">Recover Username:</label>
-                <input type="text" class="form-control" id="usernameRecoverInput">
-                <div id="usernameRecoverFeedback"></div>
+                <label for="recoverUsernameInput">Enter Email Address:</label>
+                <input type="text" class="form-control" id="recoverUsernameInput">
+                <div id="recoverUsernameFeedback"></div>
               </div>
               <button class="btn btn-primary" type="submit" id="recoverUsernameButton">Recover</button>
               <br>
@@ -118,9 +118,9 @@
             <div class="panel-heading">Reset Password</div>
             <div id="resetPasswordPanel"  class="panel-body">
               <div class="form-group">
-                <label for="passwordResetInput">Reset Password:</label>
-                <input type="password" class="form-control" id="passwordResetInput">
-                <div id="passwordResetFeedback"></div>
+                <label for="resetPasswordInput">Reset Password:</label>
+                <input type="password" class="form-control" id="resetPasswordInput">
+                <div id="resetPasswordFeedback"></div>
               </div>
               <button class="btn btn-primary" type="submit" id="resetPasswordButton">Reset</button>
               <br>
