--- a/404.html
+++ b/404.html
@@ -64,7 +64,7 @@
             <li><a href="account.html">Account Settings</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a id="navbarUsername" href="loginAndRegister.html">Not Logged In</a></li>
+            <li><a id="navbarUsername" href="loginAndRegister.html"></a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
