--- a/postfood.html
+++ b/postfood.html
@@ -85,7 +85,7 @@
                     <li><a href="account.html">Account Settings</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a id="navbarUsername" href="loginAndRegister.html">Not Logged in</a></li>
+                    <li><a id="navbarUsername" href="loginAndRegister.html"></a></li>
                 </ul>
             </div>
             <!--/.nav-collapse -->
